--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                     <div id="image"><img src="IMG-20210928-WA0010.jpg" alt="" height="100%" width="100%"></div>
                     <div id="text">
                         <div class="text-one">Hello,</div>
-                        <div class="text-two">Iam, Shiraz Siddiqui</div>
-                        <div class="text-three">Application Development Analyst 'Data Scientist'</div>
+                        <div class="text-two">Iam, Saurabh Joshi</div>
+                        <div class="text-three">Computer Science Engineer</div>
                         <div class="text-four">From uttrakhand</div>
                         <div class="button">
                     <div class="button"><a href="#contact"><button>Hire Me</button></a></div>
@@ -47,21 +47,21 @@
                 <section class="about">
                 <div id="about">
                     <div class="heading"><h1>About Me</h1></div>
-                    <div class="me"><h3>Hey I,am Shiraj </h3>
-                        <h3> I have 2 years experiance in the feild of Business Analytics <br> Data Visualization and Reporting Data 
-                            And currently I,am <br> working in Accenture from(2019-Present)</h3></div>
+                    <div class="me"><h3>Hey I,am Saurabh </h3>
+                        <h3> I have 3 years Deploma in the feild of Computer Science <br> Amazon Web Servicing And Cloud Infrastructure 
+                            </h3></div>
                     <div class="sub-heading1">
                     <h2>My Educational Details</h2>
                     <div class="lists">
-                        <li><b>B. Tech, Electronics and Tele-Commounication Engineering</b>  <div class="per"> Percentage:76.38 </div><br>
-                            Collage of Engineering Roorkee, Roorkee <br>
-                            Uttrakhand (2014-2018)</li>
-                        <li><b>XII (Senior Secondary), Science</b> <div class="per">  Percentage:75.4 </div><br>
-                            D.A.V Public School,Kashipur <br>
-                            Uttrakhand (2011-2013)</li>
-                            <li> <b>X (Secondary)</b><div class="per"> CGPA:8.0</div><br>
-                                D.A.V Public School,Kashipur <br>
-                                Uttrakhand (2009-2010)</li>
+                        <li><b>Polytechnic, Computer Science Engineering</b>  <div class="per"> Percentage:76.38 </div><br>
+                            Govt Polytechnic Kashipur, Kashipur <br>
+                            Uttrakhand (2019-2022)</li>
+                        <li><b>XII (Senior Secondary), Humanities</b> <div class="per">  Percentage:64.4 </div><br>
+                            Kendriya Vidyalaya,Kashipur <br>
+                            Uttrakhand (2017-2018)</li>
+                            <li> <b>X (Secondary)</b><div class="per"> CGPA:7.0</div><br>
+                                Kendriya Vidyalaya,Kashipur <br>
+                                Uttrakhand (2015-2016)</li>
                     </div>
                     </div>
                     <div class="sub-heading2">
@@ -176,7 +176,7 @@
                         <div class="contact-no">
                             <h2>Contact With ME</h2>
                             <h4><button>MOB no. +91-8439394860</button></h4>
-                            <h4><a href="shirazhussain123@gmail.com"><button>E-mail</button></a></h4>
+                            <h4><a href="saurabhjoshi864@gmail.com"><button>E-mail</button></a></h4>
                             <h4><a href="linkedin.com/inshiraz-siddiqui-5636a913b"><button>Linkedin Profile</button></a></h4>
                             <h4>
                                 <a href=""><li class="fa fa-facebook-f" id="icon"></li></a>
