--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
                 <section class="main">
                     <div id="main">
-                    <div id="image"><img src="IMG-20210928-WA0010.jpg" alt="" height="100%" width="100%"></div>
+                    <div id="image"><img src="20220223_205317.jpg" alt="" height="100%" width="100%"></div>
                     <div id="text">
                         <div class="text-one">Hello,</div>
                         <div class="text-two">Iam, Saurabh Joshi</div>
@@ -48,7 +48,7 @@
                 <div id="about">
                     <div class="heading"><h1>About Me</h1></div>
                     <div class="me"><h3>Hey I,am Saurabh </h3>
-                        <h3> I have 3 years Deploma in the feild of Computer Science <br> Amazon Web Servicing And Cloud Infrastructure 
+                        <h3> I have 3 years Diploma in the field of Computer Science <br> Amazon Web Servicing And Cloud Infrastructure 
                             </h3></div>
                     <div class="sub-heading1">
                     <h2>My Educational Details</h2>
@@ -67,9 +67,7 @@
                     <div class="sub-heading2">
                         <h2>My  Experiance</h2>
                         <div class="lists">
-                            <li><b>Working as a member of business axcellence team</b></li>
-                            <li><b>Trying to Improve the efficiency of team by building ML models</b></li>
-                            <li> <b>Find insights and present it using diffrent dashboarding tools(Excel/Power BI)</b></li>
+                         <li><b>currently iam freasher</b></li>
                         </div>
                     </div>
                 </div>
@@ -84,31 +82,23 @@
                     <h1>My-Skills</h1>
                 </div>
                     <li>
-                        <h3>E D A.</h3><span class="bar"><span class="second"></span></span><p>85 %</p>
+                        <h3>Amazon Web Servicing</h3><span class="bar"><span class="second"></span></span><p>85 %</p>
                     </li>
                     <li>
-                        <h3>Machine Learning</h3><span class="bar"><span class="third"></span></span><p>95 %</p>
+                        <h3>Frontend Web Development</h3><span class="bar"><span class="third"></span></span><p>95 %</p>
                     </li>
                     <li>
-                        <h3>Python</h3><span class="bar"><span class="first"></span></span><p>98 %</p>
+                        <h3>Java</h3><span class="bar"><span class="first"></span></span><p>95 %</p>
                     </li>
                     <li>
-                        <h3>Predictive Analysis</h3><span class="bar"><span class="fourth"></span></span><p>78 %</p>
+                        <h3>C</h3><span class="bar"><span class="fourth"></span></span><p>98 %</p>
                     </li>
                     <li>
-                        <h3>Financial Analysis</h3><span class="bar"><span class="fifth"></span></span><p>65 %</p>
+                        <h3>C++</h3><span class="bar"><span class="fifth"></span></span><p>76 %</p>
                     </li>
-                    <li>
-                        <h3>Power BI</h3><span class="bar"><span class="sixth"></span></span><p>70 %</p>
-                    </li>
+                    
                     <li>
                         <h3>EXCEL</h3><span class="bar"><span class="seventh"></span></span><p>80 %</p>
-                    </li>
-                    <li>
-                        <h3>Feature Engineering</h3><span class="bar"><span class="eighth"></span></span><p>98 %</p>
-                    </li>
-                    <li>
-                        <h3>Model Building</h3><span class="bar"><span class="ninth"></span></span><p>90 %</p>
                     </li>
                 </div>
                 </section>
@@ -124,27 +114,27 @@
                             <div class="icon">
                                 <i class="fas fa-desktop"></i>
                             </div>
-                            <div class="topic">Titanic Survival</div>
-                        <div class="points"><p><li>About Titanic Dataset</li></p>
-                            <p><li>Approach</li></p>
-                            <p><li>Final outcomes</li></p></div>
+                            <div class="topic">Chatbot</div>
+                        <div class="points"><p><li>About Chat</li></p>
+                            <p><li>Sending Message</li></p>
+                            <p><li>Receving Message</li></p></div>
                 </div>
                     <div class="box" id="box2">
                     <div class="icon">
                         <i class="fas fa-paint-brush"></i>
                     </div>
-                    <div class="topic">House Price Prediction</div>
-                    <div class="points"><p><li>Creative Feature engineering</li></p>
-                    <p><li>Advanced regression techniques like random forest and gradient boosting</li></p></div>
+                    <div class="topic">A Gym Web Page</div>
+                    <div class="points"><p><li>Web Development</li></p>
+                    <p><li>diet Chart and other resources</li></p></div>
                 </div>
                     <div class="box" id="box3">
                     <div class="icon">
                         <i class="fas fa-chart-line"></i>
                     </div>
-                    <div class="topic">Breast Cancer Detection</div>
-                <div class="points"> <p><li> Artificial inteligence</li></p>
-                    <p><li>Software development </li></p>
-                    <p><li>Some Hardware eqipments </li></p></div>
+                    <div class="topic">Calculator</div>
+                <div class="points"> <p><li>command line calculator</li></p>
+                    <p><li>All airthmetic calculations </li></p>
+                    <p><li>trying to give it a UI</li></p></div>
                 </div>
                 </div>
                 </div>
@@ -175,9 +165,9 @@
                     </div>
                         <div class="contact-no">
                             <h2>Contact With ME</h2>
-                            <h4><button>MOB no. +91-8439394860</button></h4>
+                            <h4><button>MOB no. +91-8193996552</button></h4>
                             <h4><a href="saurabhjoshi864@gmail.com"><button>E-mail</button></a></h4>
-                            <h4><a href="linkedin.com/inshiraz-siddiqui-5636a913b"><button>Linkedin Profile</button></a></h4>
+                            <h4><a href="https://www.linkedin.com/in/saurabh-joshi-7b613b222"><button>Linkedin Profile</button></a></h4>
                             <h4>
                                 <a href=""><li class="fa fa-facebook-f" id="icon"></li></a>
                                 <a href=""><li class="fa fa-instagram" id="icon"></li></a>
