--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
                             <h4><a href="saurabhjoshi864@gmail.com"><button>E-mail</button></a></h4>
                             <h4><a href="https://www.linkedin.com/in/saurabh-joshi-7b613b222"><button>Linkedin Profile</button></a></h4>
                             <h4>
-                                <a href=""><li class="fa fa-facebook-f" id="icon"></li></a>
-                                <a href=""><li class="fa fa-instagram" id="icon"></li></a>
+                                <a href="https://www.facebook.com/saurabh.joshi.7773631"><li class="fa fa-facebook-f" id="icon"></li></a>
+                                <a href="https://instagram.com/saurabhjoshi787?utm_medium=copy_link"><li class="fa fa-instagram" id="icon"></li></a>
                                 <a href=""><li class="fa fa-twitter" id="icon"></li></a></h4>
                         </div>
                     </div>
